--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --open --port 3000 --host",
     "build": "vite build",
-    "build:dev" : "vite build --mode development",
+    "build:dev": "vite build --mode development",
     "preview": "vite preview --host"
   },
   "dependencies": {
@@ -26,6 +26,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-pwa": "^0.14.1"
   }
 }
